# file-storage

./: .gitignore  README.md  dependencies.py  main.py  pyproject.toml
routers/: files.py  html.py
templates/: base.html  files.html  login.html  navbar.html  profile.html
